Fix flickering issue

--- a/packages/react-devtools-shared/src/devtools/views/Components/Tooltip.css
+++ b/packages/react-devtools-shared/src/devtools/views/Components/Tooltip.css
@@ -8,10 +8,15 @@
   font-size: 12px;
   background-color: var(--color-tooltip-background);
   color: var(--color-tooltip-text);
-
+  opacity: 1;
   /* Make sure this is above the DevTools, which are above the Overlay */
   z-index: 10000002;
 }
+
+.Tooltip.hidden {
+  opacity: 0;
+}
+
 
 .Container {
   width: -moz-max-content;
